tests/snapshots/run_wpt_conformance__trtx_cast_uint32_4D_tensor_to_int8.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast uint32 4D tensor to int8",
    "trtx",
    "PASS",
)
