tests/snapshots/run_wpt_conformance__trtx_cast_uint8_4D_tensor_to_float32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "cast.https.any.js",
    "cast uint8 4D tensor to float32",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    castInput: u8[2, 2, 2, 3];\n  }\n\n  nodes {\n    [castOutput] = cast(castInput, label=\"\");\n  }\n\n  outputs { castOutput; }\n}\n",
        ),
    },
)
