tests/snapshots/run_wpt_conformance__trtx_cast_uint8_4D_tensor_to_uint32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast uint8 4D tensor to uint32",
    "trtx",
    "PASS",
)
